@@ -146,10 +146,10 @@ int argvAppend(/*@out@*/ ARGV_t * argvp, const ARGV_t av)
  * Split a string into an argv array.
  * @retval *argvp	argv array
  * @param str		string arg to split
- * @param seps		seperator characters
+ * @param seps		separator characters (NULL is shell white space)
  * @return		0 always
  */
-int argvSplit(ARGV_t * argvp, const char * str, const char * seps)
+int argvSplit(ARGV_t * argvp, const char * str, /*@null@*/ const char * seps)
 	/*@modifies *argvp @*/;
 
 /**
